<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity">

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@mipmap/bg_"
        android:orientation="vertical">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@mipmap/logo_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayoutSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="#60ffffff"
                android:orientation="vertical"
                android:padding="15dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userIdLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_user_name"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeWidth="1dp"
                    android:textColorHint="@color/white"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextUserPin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textColor="@color/InputtextColor"
                        android:fontFamily="@font/opensans_regular"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="15sp"
                        android:textColorHint="@color/white"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_background"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/opensans_regular"
                    android:textSize="12sp"
                    android:textAllCaps="true"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Forgot Password"
                    android:textColor="@color/white"
                    android:fontFamily="@font/opensans_regular"
                    android:textSize="12dp"
                    android:layout_marginTop="35dp"/>

            </LinearLayout>










            <LinearLayout
                android:id="@+id/linearLayoutForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:background="#40ffffff"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userEmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_emial"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeWidth="1dp"
                    android:textColorHint="@color/white"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textColor="@color/InputtextColor"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/opensans_regular"
                        android:singleLine="true"
                        android:textSize="15sp"
                        android:textColorHint="@color/white"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonReset"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_background"
                    android:text="@string/submit"
                    android:fontFamily="@font/opensans_regular"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:fontFamily="@font/opensans_regular"
                    android:textSize="12dp"
                    android:layout_marginTop="35dp"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>